------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.5, including beta and release candidate versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

23-Jun-2009 Gergo Erdosi
 # Fixed weblink checkin method.

23-Jun-2009 Andrew Eddie
 ^ Changed mod_custom into real module; added allowance to run content through content plugin system.
 # Fixed bug preventing mod_custom from displaying content.
 # Fixed bug in JTable::move causing SQL error (ordering field not quoted properly).
 
========== VERSION 1.6 APLHA RELEASED ==========

22-Jun-2009 Gergo Erdosi
 - Removed a duplicate checked out icon from com_content.
 # Fixed form validation on cancel in com_content.

22-Jun-2009 Andrew Eddie
 ^ Configured helpers to support the com_categories submenu.
 + Added JForm fields and parameters to list component and module layout overrides.
 - Drop ordering field from jos_categoies.

21-Jun-2009 Gergo Erdosi
 # Fixed configuration variable error.
 # Fixed typo in installation SQL file.
 ^ Merged 'installation' branch (fixes to installer).
 - Removed installation/LICENSE.
 - Removed unnecessary manifest files.
 - Removed unnecessary language files.
 # Fixed mod_stats query.

21-Jun-2009 Ercan Ozkaya
 ^ Upgraded Mootools to version 1.2.3

20-Jun-2009 Andrew Eddie
 ^ Converted admin com_content to MVC
 ^ Converted 'frontpage' to 'featured' articles.
 ^ Integrated trash handling into com_content.
 - Removed com_frontpage and com_trash.
 ^ Converted com_menus to nested sets.
 ^ Redesigned com_menus menu item edit page.
 ^ Integrated trash handling into com_menus.
 ^ Changed article router helper to ContentRoute::article and ContentRoute::category
 ^ Standardise nested set left and right fields as lft and rgt.